opam-version: "2.0"
maintainer: "see https://github.com/moby/hyperkit"
authors: ["see https://github.com/moby/hyperkit"]
homepage: "https://github.com/moby/hyperkit"
bug-reports: "https://github.com/moby/hyperkit"
synopsis: "A lightweight hypervisor for macOS"
depends: [
  "uri"
  "qcow"
  "qcow-tool"
  "sha"
  "conduit"
  "lwt"
  "mirage-block-unix"
  "conf-libev"
  "logs"
  "fmt"
  "mirage-unix"
  "prometheus-app"
]
