opam-version: "2.0"
maintainer: "dave@recoil.org"
authors: [ "see github source" ]
license: "BSD 2 clause"
homepage: "https://github.com/moby/hyperkit"
dev-repo: "git+https://github.com/moby/hyperkit.git"
bug-reports: "https://github.com/moby/hyperkit/issues"
doc: "https://github.com/moby/hyperkit"

depends: [
  "uri"
  "qcow"              {= "0.11.0"}
  "qcow-tool"
  "sha"
  "conduit"           {= "2.1.0"}
  "lwt"               {= "5.3.0"}
  "mirage-block-unix" {= "2.12.0"}
  "conf-libev"
  "logs"
  "fmt"
  "mirage-unix"
  "prometheus-app"
]
synopsis: "Uses the Hypervisor.framework on macOS to run Linux VMs"
