opam-version: "2.0"
maintainer: "see https://github.com/moby/hyperkit"
authors: ["see https://github.com/moby/hyperkit"]
homepage: "https://github.com/moby/hyperkit"
bug-reports: "https://github.com/moby/hyperkit"
synopsis: "A lightweight hypervisor for macOS"
depends: [
"asetmap" {= "0.8.1"}
"astring" {= "0.8.3"}
"base" {= "v0.12.2"}
"base-bigarray" {= "base"}
"base-bytes" {= "base"}
"base-threads" {= "base"}
"base-unix" {= "base"}
"base64" {= "3.2.0"}
"bigarray-compat" {= "1.0.0"}
"cmdliner" {= "1.0.4"}
"cohttp" {= "2.3.0"}
"cohttp-lwt" {= "2.3.0"}
"cohttp-lwt-unix" {= "2.3.0"}
"conduit" {= "2.0.1"}
"conduit-lwt" {= "2.0.1"}
"conduit-lwt-unix" {= "2.0.1"}
"conf-libev" {= "4-11"}
"conf-m4" {= "1"}
"cppo" {= "1.6.6"}
"cstruct" {= "3.7.0"}
"cstruct-lwt" {= "3.7.0"}
"depext" {= "transition"}
"domain-name" {= "0.3.0"}
"dune" {= "1.11.4"}
"dune-configurator" {= "1.0.0"}
"duration" {= "0.1.2"}
"fieldslib" {= "v0.12.0"}
"fmt" {= "0.8.8"}
"io-page" {= "2.3.0"}
"io-page-unix" {= "2.3.0"}
"ipaddr" {= "4.0.0"}
"ipaddr-sexp" {= "4.0.0"}
"jbuilder" {= "transition"}
"jsonm" {= "1.0.1"}
"logs" {= "0.7.0"}
"lwt" {= "4.4.0"}
"macaddr" {= "4.0.0"}
"magic-mime" {= "1.1.2"}
"mirage-block" {= "1.2.0"}
"mirage-block-lwt" {= "1.2.0"}
"mirage-block-unix" {= "2.11.2"}
"mirage-channel" {= "3.2.0"}
"mirage-channel-lwt" {= "3.2.0"}
"mirage-clock" {= "2.0.0"}
"mirage-clock-lwt" {= "2.0.0"}
"mirage-console" {= "2.4.3"}
"mirage-console-lwt" {= "2.4.3"}
"mirage-device" {= "1.2.0"}
"mirage-flow" {= "1.6.0"}
"mirage-flow-lwt" {= "1.6.0"}
"mirage-fs" {= "2.0.0"}
"mirage-fs-lwt" {= "2.0.0"}
"mirage-kv" {= "2.0.0"}
"mirage-kv-lwt" {= "2.0.0"}
"mirage-net" {= "2.0.0"}
"mirage-net-lwt" {= "2.0.0"}
"mirage-protocols" {= "3.1.0"}
"mirage-protocols-lwt" {= "3.1.0"}
"mirage-random" {= "1.2.0"}
"mirage-stack" {= "1.4.0"}
"mirage-stack-lwt" {= "1.4.0"}
"mirage-time" {= "1.3.0"}
"mirage-time-lwt" {= "1.3.0"}
"mirage-types" {= "3.6.0"}
"mirage-types-lwt" {= "3.6.0"}
"mirage-unix" {= "3.2.0"}
"mmap" {= "1.1.0"}
"num" {= "1.2"}
"ocaml" {= "4.07.0"}
"ocaml-base-compiler" {= "4.07.0"}
"ocaml-compiler-libs" {= "v0.12.1"}
"ocaml-config" {= "1"}
"ocaml-migrate-parsetree" {= "1.4.0"}
"ocamlbuild" {= "0.14.0"}
"ocamlfind" {= "1.8.1"}
"ocplib-endian" {= "1.0"}
"opam-depext" {= "1.1.3"}
"parsexp" {= "v0.12.0"}
"ppx_derivers" {= "1.2.1"}
"ppx_fields_conv" {= "v0.12.0"}
"ppx_sexp_conv" {= "v0.12.0"}
"ppx_tools" {= "5.1+4.06.0"}
"ppx_type_conv" {= "v0.11.0"}
"ppxlib" {= "0.8.1"}
"prometheus" {= "0.5"}
"prometheus-app" {= "0.5"}
"qcow" {= "0.10.4"}
"qcow-tool" {= "0.10.5"}
"re" {= "1.9.0"}
"result" {= "1.4"}
"rresult" {= "0.6.0"}
"seq" {= "base"}
"sexplib" {= "v0.12.0"}
"sexplib0" {= "v0.12.0"}
"sha" {= "1.12"}
"stdio" {= "v0.12.0"}
"stdlib-shims" {= "0.1.0"}
"stringext" {= "1.6.0"}
"topkg" {= "1.0.1"}
"uchar" {= "0.0.2"}
"unix-type-representations" {= "0.1.1"}
"uri" {= "3.0.0"}
"uri-sexp" {= "3.0.0"}
"uutf" {= "1.0.2"}
]
